<resources>
    <string name="app_name">Numeroscop</string>
    <string name="welcome_back">Welcome Back !</string>
    <string name="login_to_continue">Login to Continue !!</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="enter_mobile_number">Enter Mobile Number</string>
    <string name="login">Login</string>
    <string name="dont_have_any_account">Don\'t have any account ?</string>
    <string name="register">Register</string>
    <string name="otp_verification">OTP Verification</string>
    <string name="we_have_send_verification_code">We have send verification code on this number -</string>
    <string name="number_numerical">+91-856XXXXX91</string>
    <string name="enter_otp_number">Enter OTP</string>
    <string name="verify">Verify</string>
    <string name="dont_receive_otp">Don\'t receive OTP ?</string>
    <string name="resend">Resend</string>
    <string name="create_an_account">Create an account</string>
    <string name="full_name">Full Name</string>
    <string name="enter_your_name">Enter Full Name</string>
    <string name="email_id">Email ID</string>
    <string name="enter_your_email">Enter email id</string>
    <string name="already_register">Already register ?</string>
    <string name="numerology">Numeroscop</string>
    <string name="welcome">Welcome</string>
    <string name="deepak">Deepak</string>
    <string name="notequal">!!</string>
    <string name="numerology_result_based">Numeroscop result is based on gender and birth date</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="select_date_of_birth">Select Date of Birth</string>
    <string name="please_select_gender">Please Select Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="home">Home</string>
    <string name="myreports">My Reports</string>
    <string name="about_us">About Us</string>
    <string name="termAndCondition"><![CDATA[Term & Conditions]]></string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="contact_us">Contact Us</string>
    <string name="deepak_thakuriya">Deepak Thakuriya</string>
    <string name="abc_email">abc@gmail.com</string>
    <string name="losho_grid">Losho Grid</string>
    <string name="date_of_birt">Date of Birth -</string>
    <string name="date">21/03/1991</string>
    <string name="driver">Driver</string>
    <string name="lucky_number">Lucky Number -</string>
    <string name="one">1</string>
    <string name="conductor">Conductor</string>
    <string name="name_number">Name Number</string>
    <string name="kuwa_number">kua Number -</string>
    <string name="present_number">Present Number</string>
    <string name="numbers">1,2,3,4</string>
    <string name="missing_number">Missing Number</string>
    <string name="generate_reports">Generate Reports</string>
    <string name="it_rarely_possible">*It\'s rarely possible for anyone to have all 9 numbers \n in the Lo shu Grid but there are some remedies</string>
    <string name="plane_detail">Plane Details</string>
    <string name="anko_ka_khel">Anko Ka Khel Grid Planes</string>
    <string name="lo_shu_plane">Lo Shu Planes</string>
    <string name="submit">Submit</string>
    <string name="vertical_plane">Vertical Planes</string>
    <string name="horizontal_plane">Horizontal Planes</string>
    <string name="success_plane_second">Success Plane ||</string>
    <string name="success_plane_first">Success Plane |</string>
    <string name="there_are_eight_plane">There are 8 planes in Lo Shu Grid Namely\n\n 1. Mental Plane\n 2. Emotional Plane\n 3. Practical Plane\n 4. Thought Plane\n 5. Will Plane\n 6. Action Plane\n 7. Golden Plane (Success Plane ||)\n 8. Silver Success Plane (Success Plane |)</string>
    <string name="mental_plane"><u>Mental Plane</u></string>
    <string name="desription_mental_plane"><b>4,9,2</b> is called mental plane because 4 represent</string>
    <string name="privacy_description">Your privacy is critical to us. Likewise, we have built up this Policy with the end goal you should see how we gather, utilize, impart and reveal and make utilization of individual data. The following blueprints our privacy policy. Before or at the time of collecting personal information, we will identify the purposes for which information is being collected. We will gather and utilization of individual data singularly with the target of satisfying those reasons indicated by us and for other good purposes, unless we get the assent of the individual concerned or as required by law. We will just hold individual data the length of essential for the satisfaction of those reasons. We will gather individual data by legal and reasonable means and, where fitting, with the information or assent of the individual concerned. Personal information ought to be important to the reasons for which it is to be utilized, and, to the degree essential for those reasons, ought to be exact, finished, and updated. We will protect individual data by security shields against misfortune or burglary, and also unapproved access, divulgence, duplicating, use or alteration. We will promptly provide customers with access to our policies and procedures for the administration of individual data. We are focused on leading our business as per these standards with a specific end goal to guarantee that the privacy of individual data is secure and maintained.</string>
    <string name="strength">Strengths</string>
    <string name="logout">Logout</string>
    <string name="no_network_message">Please check your network connection.</string>
    <string name="no_internet">Oops! No Internet</string>
    <string name="loading">Loading &#8230;</string>
    <string name="default_error">Something went wrong, please try again later.</string>
    <string name="oops">Oops!</string>
    <string name="namely">

Your Name Number is <b>%1$s</b>.\n\n
You should change your Name Number to 5, 6 or 1 using following characters:\n\n
A, Q, Y, I, J = 1\n\n
B, R, K = 2\n\n
G, C, L, S = 3\n\n
D, M, T = 4\n\n
E, H, N, X = 5\n\n
U, V, W = 6\n\n
O, Z = 7\n\n
F, P = 8\n\n
</string>

    <string name="namely1">Your Name Number is <b></b> </string>

    <string name="namely2">

Your Name Number is <b>8</b>.\n\n
You should change your Name Number to 5, 6 or 1 using following characters:\n\n
A, Q, Y, I, J = 1\n\n
B, R, K = 2\n\n
G, C, L, S = 3\n\n
D, M, T = 4\n\n
E, H, N, X = 5\n\n
U, V, W = 6\n\n
O, Z = 7\n\n
F, P = 8\n\n
</string>
    <string name="name">Name</string>
    <string name="mobile_no">Mobile Number</string>
    <string name="email_address">Email Address</string>
    <string name="profile">Profile</string>
    <string name="update">Update</string>
    <string name="dob">Date of Birth</string>
    <string name="month">Month</string>
    <string name="day">Day</string>
    <string name="year">Year</string>
    <string name="power_of_driver_is_100">Power of Driver is: 100</string>
    <string name="power_of_conductor_is_80">Power of Conductor is: 80</string>
    <string name="select_your_option">Select Your Option</string>
    <string name="take_from_camera">Take From Camera</string>
    <string name="pick_from_gallery">Pick From Gallery</string>
    <string name="select_image">Select image</string>
    <string name="address">Address</string>
    <string name="bussiness_name">Bussiness Name</string>
    <string name="referal_code">Referal Code</string>
    <string name="please_check_your_internet_connection">Please check internet connection</string>
    <string name="please_enter_name">Please Enter Name</string>
    <string name="please_enter_valid_mobile">Please Enter Valid Mobile Number</string>
    <string name="please_enter_email">Please Enter Email</string>
    <string name="personal_month">Personal Month</string>
    <string name="select_desired_date">Select Desired Date</string>
    <string name="match_maker">Match Maker</string>
    <string name="gender">Gender</string>
    <string name="male_name">Male Name</string>
    <string name="female_name">Female Name</string>
    <string name="male_date_of_birth">Male Date of Birth</string>
    <string name="female_date_of_birth">Female Date of Birth</string>
    <string name="personal_day">Personal Day</string>
    <string name="plan_list">Plan List</string>
    <string name="buy">Buy</string>
    <string name="purchased">Purchased</string>
    <string name="upgrade">Upgrade</string>
    <string name="membership">Membership</string>
    <string name="to_see_complete_report_upgrade_your_membership">To See complete report upgrade your Membership</string>
    <string name="select_plan">Select Plan</string>
    <string name="upgrage_plan">Upgrage Plan</string>
    <string name="report">Report</string>
    <string name="punch_line"><u>PUNCH LINE</u></string>
    <string name="plane"><u>Plane</u></string>
    <string name="golden_plane"><u>Golden Plane</u></string>
    <string name="property_plane"><u>Property Plane</u></string>
    <string name="thought_plane"><u>Thought Plane</u></string>
    <string name="will_plane"><u>Will Plane</u></string>
    <string name="action_plane"><u>Action Plane</u></string>
    <string name="emotional_plane"><u>Emotional Plane</u></string>
    <string name="practical_plane"><u>Practical Plane</u></string>
    <string name="driver_characterstics"><u>Driver Characterstics</u></string>
    <string name="conductor_characterstics"><u>Conductor Characterstics</u></string>
    <string name="repeat_number"><u>Repeat Number</u></string>
    <string name="single_number"><u>Single Number</u></string>
    <string name="missing_number_of_report"><u>Missing Number of Report</u></string>
    <string name="name_analysis"><u>NAME ANALYSIS</u></string>
    <string name="lucky_days"><u>Lucky Days</u></string>
    <string name="neutral_days"><u>Neutral Days</u></string>
    <string name="avoid_days"><u>Avoid Days</u></string>
    <string name="lucky_colours"><u>Lucky Colours</u></string>
    <string name="neutral_colours"><u>Neutral Colours</u></string>
    <string name="avoid_colours"><u>Avoid Colours</u></string>
    <string name="lucky_profession"><u>Lucky Profession</u></string>
    <string name="neutral_profession"><u>Neutral Profession</u></string>
    <string name="avoid_profession"><u>Avoid Profession</u></string>
    <string name="karmic_number"><u>Karmic Number</u></string>
    <string name="mobile_report"><u>Mobile Report</u></string>
    <string name="personal_month_number"><u>Personal Month Number</u></string>
    <string name="personal_year_number"><u>Personal Year Number</u></string>
    <string name="your_driver_is">"Your Driver is "</string>
    <string name="your_conductor_is">"Your Conductor is "</string>
    <string name="enter_girl_s_details">Enter Girl\'s Details</string>
    <string name="enter_boy_s_details">Enter Boy\'s Details</string>
    <string name="solution">Solution</string>
    <string name="remedies">Remedies</string>
    <string name="expert_advise">Expert Advice</string>
    <string name="skip"><![CDATA[Skip & Share PDF]]></string>
    <string name="grid_plans">Grid Planes</string>
    <string name="get_pdf">Get PDF</string>
    <string name="available_yatras">Available Yantras</string>
    <string name="available_bracelet">Available Bracelet</string>
    <string name="no_product_found">No product found</string>
    <string name="solutions">Solutions</string>
    <string name="type_solution_here">Type solutions here</string>


</resources>