<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

        <item android:id="@+id/itHome"
            android:title="@string/myreports" />

        <item android:id="@+id/itPersonalMonth"
            android:title="@string/personal_day" />

        <item android:id="@+id/itMatchMaker"
            android:title="@string/match_maker" />

        <item android:id="@+id/itPlanList"
            android:title="@string/membership" />

<!--        <item android:id="@+id/itMyReports"-->
<!--            android:title="@string/myreports"/>-->


<!--        <item android:id="@+id/itAboutUs"-->
<!--            android:title="@string/about_us"/>-->


        <item android:id="@+id/itTermCondition"
            android:title="@string/termAndCondition"/>


<!--        <item android:id="@+id/itPrivacyPolicy"-->
<!--            android:title="@string/privacy_policy"/>-->


        <item android:id="@+id/itContactUs"
            android:title="@string/contact_us"/>

</menu>