<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/consRoot"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_60"
            android:background="@color/App_color"
            android:orientation="vertical"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/imgBack"
                android:layout_width="@dimen/dp_30"
                android:layout_height="@dimen/dp_30"
                android:layout_margin="@dimen/dp_10"
                android:src="@drawable/ic_back_bg"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="@color/white"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/expert_advise"
                android:textColor="@color/white"
                android:textSize="@dimen/sp_16"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@+id/consRoot"
            app:layout_constraintBottom_toBottomOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/dp_100">

                <TextView
                    android:id="@+id/txtTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/solutions"
                    android:textColor="@color/black"
                    android:textSize="@dimen/sp_18"
                    android:fontFamily="@font/roboto_medium"
                    android:layout_marginVertical="@dimen/dp_20"
                    android:layout_marginHorizontal="@dimen/dp_20"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>

                <EditText
                    android:id="@+id/editSolution"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="top|start"
                    android:hint="@string/type_solution_here"
                    android:inputType="textMultiLine"
                    android:lines="12"
                    android:textColor="@color/black"
                    android:padding="@dimen/dp_8"
                    android:background="@drawable/boundary_spinner_lang"
                    android:maxLines="20"
                    android:textSize="@dimen/sp_14"
                    android:minLines="8"
                    android:scrollbars="vertical"
                    android:layout_marginHorizontal="@dimen/dp_15"
                    android:layout_marginTop="@dimen/dp_5"
                    app:layout_constraintTop_toBottomOf="@+id/txtTitle"/>

                <TextView
                    android:id="@+id/txtYantra"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/available_yatras"
                    android:textColor="@color/black"
                    android:textSize="@dimen/sp_18"
                    android:visibility="gone"
                    android:fontFamily="@font/roboto_medium"
                    android:layout_marginVertical="@dimen/dp_20"
                    android:layout_marginHorizontal="@dimen/dp_20"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/editSolution"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyYantra"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/dp_10"
                    android:layout_marginTop="@dimen/dp_10"
                    app:layout_constraintTop_toBottomOf="@+id/txtYantra"/>

                <TextView
                    android:id="@+id/txtBracelet"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/available_bracelet"
                    android:textColor="@color/black"
                    android:textSize="@dimen/sp_18"
                    android:fontFamily="@font/roboto_medium"
                    android:visibility="gone"
                    android:layout_marginVertical="@dimen/dp_20"
                    android:layout_marginHorizontal="@dimen/dp_20"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/recyYantra"/>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyBracelet"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/dp_10"
                    android:layout_marginTop="@dimen/dp_10"
                    app:layout_constraintTop_toBottomOf="@+id/txtBracelet"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.core.widget.NestedScrollView>

        <TextView
            android:id="@+id/txtNoProduct"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/roboto_medium"
            android:text="@string/no_product_found"
            android:textColor="@color/App_color"
            android:textSize="@dimen/sp_16"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardSubmit"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_40"
            app:cardCornerRadius="@dimen/dp_25"
            app:cardElevation="@dimen/dp_5"
            android:onClick="onClick"
            android:layout_marginHorizontal="@dimen/dp_25"
            app:layout_constraintBottom_toTopOf="@+id/txtSkip">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/submit"
                android:textColor="@color/white"
                android:textSize="@dimen/sp_15"
                android:fontFamily="@font/roboto_bold"
                android:textFontWeight="300"
                android:gravity="center"
                android:background="@color/App_color"/>

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/txtSkip"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_bold"
            android:gravity="center"
            android:text="@string/skip"
            android:textColor="@color/text_Color"
            android:textFontWeight="300"
            android:paddingTop="@dimen/dp_10"
            android:paddingBottom="@dimen/dp_20"
            android:textSize="@dimen/dp_16"
            android:onClick="onClick"
            android:background="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>