<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:bind="http://schemas.android.com/tools">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        android:orientation="vertical"
        android:paddingBottom="20dp">

        <TextView
            android:id="@+id/dialog_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/App_color"
            android:gravity="center"
            android:letterSpacing="0.08"
            android:padding="15dp"
            android:text="@string/select_your_option"
            android:textColor="@color/white"
            android:textSize="@dimen/sp_22"
            android:fontFamily="@font/roboto_bold"
            android:textFontWeight="700"
            bind:targetApi="lollipop" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:gravity="center_vertical"
            android:layout_marginTop="@dimen/dp_10">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ic_chat_camera"
                android:layout_width="@dimen/dp_40"
                android:layout_height="@dimen/dp_40"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/dp_15"
                android:layout_marginTop="@dimen/dp_15"
                android:layout_marginEnd="@dimen/dp_15"
                android:layout_marginBottom="@dimen/dp_15"
                android:tint="@color/red"
                app:srcCompat="@drawable/ic_camera_new" />

            <TextView
                android:id="@+id/textCamera"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignBottom="@+id/ic_chat_camera"
                android:layout_toEndOf="@+id/ic_chat_camera"
                android:fontFamily="@font/roboto_medium"
                android:gravity="center_vertical"
                android:padding="@dimen/dp_10"
                android:text="@string/take_from_camera"
                android:textColor="@color/black"
                android:textFontWeight="600"
                android:textSize="@dimen/sp_15"
                bind:targetApi="m" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ic_menu_gallery"
                android:layout_width="@dimen/dp_40"
                android:layout_height="@dimen/dp_40"
                android:layout_alignParentStart="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/dp_15"
                android:layout_marginTop="@dimen/dp_15"
                android:layout_marginEnd="@dimen/dp_15"
                android:layout_marginBottom="@dimen/dp_15"
                android:tint="@color/red"
                app:srcCompat="@drawable/ic_gallery" />

            <TextView
                android:id="@+id/textGallery"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_alignBottom="@+id/ic_menu_gallery"
                android:layout_toEndOf="@+id/ic_menu_gallery"
                android:fontFamily="@font/roboto_medium"
                android:gravity="center_vertical"
                android:padding="@dimen/dp_10"
                android:text="@string/pick_from_gallery"
                android:textColor="@color/black"
                android:textFontWeight="600"
                android:textSize="@dimen/sp_15"
                bind:targetApi="m" />
        </RelativeLayout>

    </LinearLayout>
</layout>